--- a/appSettings.json
+++ b/appSettings.json
@@ -1,13 +1,18 @@
 {
-  "Server": "aaaaaaaaaaaaaaaaaaaaa",
-  "Port": 2222,
-  "UseSsl": false,
-  "UserName": "ddddddddddddd",
-  "PasswordHash": "iSMyy3t\u002Bgy7IdsNApmgJ2QOvgwH7VgkYiowVwGmx87c=",
-  "Salt": "34NEwC445\u002BSAQ7KebDAdDA==",
-  "GroupExecution": "yyrryyruyuyu",
-  "SecretExecutionCode": "yuyuyutyyty",
-  "ServiceUserName": "trgtrtrtr",
-  "ServicePassword": "43666y63y6y6y63y6",
-  "DelayCheckNewMail": 5678
+  "ServerImap": {
+    "Server": "imap.nostopti.com.br",
+    "Port": 993,
+    "UseSsl": true,
+    "UserName": "marcus@nostopti.com.br",
+    "PasswordImap": "xZIw8Tx5kiK1FBsLIOYQNw=="
+  },
+  "ParamsExecution": {
+    "GroupExecution": "groupTest",
+    "SecretExecutionCode": "3yVlHBCMWmXNc24m44fCbA=="
+  },
+  "ServiceConf": {
+    "ServiceUserName": "",
+    "ServicePassword": "7pMGJFwkHnEM9iKpTqYE6Q==",
+    "DelayCheckNewMail": 1000
+  }
 }
